Alignment Issue

--- a/src/Components/Menu.css
+++ b/src/Components/Menu.css
@@ -60,7 +60,7 @@ menu ul li a::before {
   left: -10px;
   width: 0px;
   height: 20px;
-  background: #0db5cb;
+  background: #cf00a3;
   border-radius: 50%;
 }
 
